--- a/pages/projects.html
+++ b/pages/projects.html
@@ -36,46 +36,33 @@
     </nav>
 
     <!-- Projects Section -->
-    <section id="projects" class="py-16">
+    <section id="projects" class="py-16 scroll-color-shift">
         <div class="container mx-auto px-4">
             <h2 class="text-3xl font-bold text-center mb-8 fade-in">My Projects</h2>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                 <!-- Project 1 -->
                 <div class="flip-card fade-in">
                     <div class="flip-card-inner">
-                        <div class="flip-card-front bg-gray-800 p-6 rounded-lg">
-                            <h3 class="text-xl font-semibold mb-2">Project One</h3>
-                            <p class="mb-4">A web application built with HTML, CSS, and JavaScript.</p>
+                        <div class="flip-card-front bg-gray-800 p-6 rounded-lg glow-effect">
+                            <h3 class="text-xl font-semibold mb-2">Tour and Travel Management System</h3>
+                            <p class="mb-4">A web application with guide booking, package exploration, authentication, reviews, and payment gateway.</p>
                         </div>
                         <div class="flip-card-back bg-blue-600 p-6 rounded-lg">
-                            <p>Technologies: HTML, CSS, JavaScript</p>
-                            <a href="#" class="text-white hover:underline">View Project</a>
+                            <p>Technologies: Node Js, Express Js, MondoDB, Tailwind CSS</p>
+                            <a href="https://github.com/Shihab-278/Outing-BD-Client" class="text-white hover:underline">View Project</a>
                         </div>
                     </div>
                 </div>
                 <!-- Project 2 -->
                 <div class="flip-card fade-in">
                     <div class="flip-card-inner">
-                        <div class="flip-card-front bg-gray-800 p-6 rounded-lg">
-                            <h3 class="text-xl font-semibold mb-2">Project Two</h3>
-                            <p class="mb-4">A full-stack app with a modern UI/UX design.</p>
+                        <div class="flip-card-front bg-gray-800 p-6 rounded-lg glow-effect">
+                            <h3 class="text-xl font-semibold mb-2">University Lost & Found Website</h3>
+                            <p class="mb-4">A web application with CRUD operations, built using XAMPP, PHP, and MySQL.</p>
                         </div>
                         <div class="flip-card-back bg-blue-600 p-6 rounded-lg">
-                            <p>Technologies: React, Node.js, MongoDB</p>
-                            <a href="#" class="text-white hover:underline">View Project</a>
-                        </div>
-                    </div>
-                </div>
-                <!-- Project 3 -->
-                <div class="flip-card fade-in">
-                    <div class="flip-card-inner">
-                        <div class="flip-card-front bg-gray-800 p-6 rounded-lg">
-                            <h3 class="text-xl font-semibold mb-2">Project Three</h3>
-                            <p class="mb-4">A responsive website with Tailwind CSS.</p>
-                        </div>
-                        <div class="flip-card-back bg-blue-600 p-6 rounded-lg">
-                            <p>Technologies: Tailwind CSS, JavaScript</p>
-                            <a href="#" class="text-white hover:underline">View Project</a>
+                            <p>Technologies: PHP, JavaScript, CSS, MySQL</p>
+                            <a href="https://github.com/Shihab-278/Lost-and-found" class="text-white hover:underline">View Project</a>
                         </div>
                     </div>
                 </div>
@@ -85,10 +72,10 @@
 
     <!-- Footer -->
     <footer class="gradient-bg p-4 text-center">
-        <div class="space-x-4 mb-2">
-            <a href="#" class="social-icon hover:text-gray-300"><i class="fab fa-github"></i></a>
-            <a href="#" class="social-icon hover:text-gray-300"><i class="fab fa-linkedin"></i></a>
-            <a href="#" class="social-icon hover:text-gray-300"><i class="fab fa-twitter"></i></a>
+       <div class="space-x-4 mb-2">
+            <a href="https://github.com/shihab-278" class="social-icon hover:text-gray-300"><i class="fab fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/shihab-uddin-20606722a/" class="social-icon hover:text-gray-300"><i class="fab fa-linkedin"></i></a>
+            <a href="https://x.com/ahmedshihab278" class="social-icon hover:text-gray-300"><i class="fab fa-twitter"></i></a>
         </div>
         <p>© 2025 Shihab Uddin. All rights reserved.</p>
     </footer>
